--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     <button type="Button"  class="toggle-btn"> LOGIN</button>
 
 </div>
-<p class="ctr-act" ><a href="registrationpage.htm"> Create New Account </a></p>
+<p class="ctr-act" ><a href="registrationpage.html"> Create New Account </a></p>
 
 
 </form>
